Moved div inside of footer tag instead of other way around

--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -131,8 +131,10 @@
             </div>
         </main>
         <!-- Footer -->
-        <div>
-            <footer>Footer</footer>
-        </div>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
