--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -98,8 +98,10 @@
                 </section>
             </div>
         </main>
-        <div>
-            <footer>Footer</footer>
-        </div>
+        <footer>
+                <div>
+                    Footer
+                </div>
+        </footer>
     </body>
 </html>
