--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -122,8 +122,10 @@
                 </section>
             </div>
         </main>
-        <div>
-            <footer>Footer</footer>
-        </div>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
