--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -141,8 +141,10 @@
             </div>
         </main>
         <!-- Footer -->
-        <div>
-            <footer>Footer</footer>
-        </div>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
