--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -133,8 +133,10 @@
             </div>
         </main>
         <!-- Footer -->
-        <div>
-            <footer>Footer</footer>
-        </div>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
