--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -21,7 +21,7 @@
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
-            <section>
+            </section>
             <section>
                 <div>
                     <h2>Services</h2>
