--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -75,7 +75,9 @@
             </section>
             <section>
                 <div>
-                    <header><h2>Latest news</h2></header>
+                    <header>
+                        <h2>Latest news</h2>
+                    </header>
                     <div>
                         <article>
                             <p>Career</p>
@@ -103,7 +105,7 @@
                     </header>
                     <div>
                         <article>Testimonial 1</article>
-                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
                         <article>Testimonial 3</article>
                     </div>
                 </div>
