--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -5,28 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <meta name="description" content="Techium is a digital agency">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
-        <link rel="icon" type="image/x-icon" href="./favicon.png">
+        <link rel="icon" type="image/png" href="./favicon.png">
         <title>Homepage - Techium</title>
     </head>
     <body>
-        <!-- Header -->
-        <div>
-            <header>
+        <header>
+            <div>
                 <span>Techium</span>
                 <nav></nav>
-            </header>
-        </div>
-        <!-- Main -->
+            </div>
+        </header>
         <main>
             <h1>Homepage</h1>
-            <div>
-                <section>
+            <section>
+                <div>
                     <h2>We help you build your brand!</h2>
-                </section>
-            </div>
-            <!-- Services section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>Services</h2>
                         <p>We work with you</p>
@@ -39,11 +36,10 @@
                         <h3>Web Development</h3>
                         <h3>Social Media</h3>
                     </div>
-                </section>
-            </div>
-            <!-- Works section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>Works</h2>
                         <p>Take a look in our portfolio</p>
@@ -59,11 +55,10 @@
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
-                </section>
-            </div>
-            <!-- About Us section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>About Us</h2>
                         <p>Everything about us</p>
@@ -76,11 +71,10 @@
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
-                </section>
-            </div>
-            <!-- Latest news section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>Latest news</h2>
                     </header>
@@ -101,25 +95,23 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
-                </section>
-            </div>
-            <!-- Testimonials section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
                         <article>Testimonial 1</article>
-                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
                         <article>Testimonial 3</article>
                     </div>
-                </section>
-            </div>
-            <!-- Contact section -->
-            <div>
-                <section>
+                </div>
+            </section>
+            <section>
+                <div>
                     <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
@@ -127,14 +119,11 @@
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
         </main>
-        <!-- Footer -->
         <footer>
-            <div>
-                Footer
-            </div>
+            <div>Footer</div>
         </footer>
     </body>
 </html>
