--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -10,33 +10,34 @@
     </head>
     <body>
         <!-- Header -->
-        <div>
-            <header>
+        <header>
+            <div>
                 <div>
-                    <a href="./"><span>Techium</span></a>
+                    <a href="/"><span>Techium</span></a>
                 </div>
                 <nav>
-                    <a href="./">Home</a>
-                    <a>Services</a>
-                    <a>Works</a>
-                    <a>About</a>
-                    <a>Latest news</a>
-                    <a>Testimonials</a>
-                    <a>Contact</a>
+                    <a href="/">Home</a>
+                    <a href="#services">Services</a>
+                    <a href="#works">Works</a>
+                    <a href="#about">About</a>
+                    <a href="#latest_news">Latest news</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
                 </nav>
-            </header>
-        </div>
+            </div>
+        </header>
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
-            <div>
-                <section>
+            <!-- Hero section -->
+            <section>
+                <div>
                     <h2>We help you build your brand!</h2>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Services section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Services</h2>
                         <p>We work with you</p>
@@ -49,11 +50,11 @@
                         <h3>Web Development</h3>
                         <h3>Social Media</h3>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Works section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Works</h2>
                         <p>Take a look in our portfolio</p>
@@ -69,11 +70,11 @@
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- About Us section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>About Us</h2>
                         <p>Everything about us</p>
@@ -86,11 +87,11 @@
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Latest news section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Latest news</h2>
                     </header>
@@ -111,25 +112,25 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Testimonials section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
                         <article>Testimonial 1</article>
-                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
                         <article>Testimonial 3</article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Contact section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
@@ -137,14 +138,12 @@
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
         </main>
         <!-- Footer -->
         <footer>
-            <div>
-                Footer
-            </div>
+            <div>Footer</div>
         </footer>
     </body>
 </html>
