--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -16,13 +16,13 @@
                     <a href="./"><span>Techium</span></a>
                 </div>
                 <nav>
-                    <a href="./">Home</a>
-                    <a>Services</a>
-                    <a>Works</a>
-                    <a>About</a>
-                    <a>Latest news</a>
-                    <a>Testimonials</a>
-                    <a>Contact</a>
+                    <a href="/">Home</a>
+                    <a href="#services">Services</a>
+                    <a href="#works">Works</a>
+                    <a href="#about">About</a>
+                    <a href="#latest_news">Latest news</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
                 </nav>
             </header>
         </div>
