Added changes to 22 forward to higher numbered files

--- a/0x00-html_advanced/22-index_old.html
+++ b/0x00-html_advanced/22-index_old.html
@@ -16,15 +16,13 @@
                     <a href="./"><span>Techium</span></a>
                 </div>
                 <nav>
-                    <ul>
-                        <li><a href="./">Home</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Works</a></li>
-                        <li><a>About</a></li>
-                        <li><a>Latest news</a></li>
-                        <li><a>Testimonials</a></li>
-                        <li><a>Contact</a></li>
-                    </ul>
+                    <a href="/">Home</a>
+                    <a href="#services">Services</a>
+                    <a href="#works">Works</a>
+                    <a href="#about">About</a>
+                    <a href="#latest_news">Latest news</a>
+                    <a href="#testimonials">Testimonials</a>
+                    <a href="#contact">Contact</a>
                 </nav>
             </header>
         </div>
@@ -46,12 +44,12 @@
                         <p>We work with you</p>
                     </header>
                     <div>
-                        <a href="#"><h3>Design & Concept</h3></a>
-                        <a href="#"><h3>Digital Strategy</h3></a>
-                        <a href="#"><h3>Content Strategy</h3></a>
-                        <a href="#"><h3>UX Design</h3></a>
-                        <a href="#"><h3>Web Development</h3></a>
-                        <a href="#"><h3>Social Media</h3></a>
+                        <h3>Design & Concept</h3>
+                        <h3>Digital Strategy</h3>
+                        <h3>Content Strategy</h3>
+                        <h3>UX Design</h3>
+                        <h3>Web Development</h3>
+                        <h3>Social Media</h3>
                     </div>
                 </section>
             </div>
@@ -60,7 +58,7 @@
                 <section>
                     <header>
                         <h2>Works</h2>
-                        <a href="#"><p>Take a look in our portfolio</p></a>
+                        <p>Take a look in our portfolio</p>
                     </header>
                     <div>
                         <article> 
@@ -102,21 +100,18 @@
                     <div>
                         <article>
                             <p>Career</p>
-                            <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
+                            <h3>Hoc loco tenere se Triarius non potuit.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                            <cite>By Kelly D.</cite>
                         </article>
                         <article>
                             <p>Digital Life</p>
-                            <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
+                            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-                            <cite>By William A.</cite>
                         </article>
                         <article>
                             <p>Social</p>
-                            <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
+                            <h3>Bestiarum vero nullum iudicium puto.</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-                            <cite>By Frances J.</cite>
                         </article>
                     </div>
                 </section>
@@ -129,15 +124,9 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <blockquote cite="Yuri Y.">
-                            <article>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</article>
-                        </blockquote>
-                        <blockquote cite="Dorrie S.">
-                            <article>Thank you so much for your help. Techium company is awesome!</article>
-                        </blockquote>
-                        <blockquote cite="Sven H.">
-                            <article>I love your system. Definitely worth the investment. I'd be lost without Techium company.</article>
-                        </blockquote>
+                        <article>Testimonial 1</article>
+                        <article>Testimonial 1</article>
+                        <article>Testimonial 3</article>
                     </div>
                 </section>
             </div>
@@ -157,22 +146,10 @@
         </main>
         <!-- Footer -->
         <footer>
-            <address>234 Washington Street<br>Urbana, Illinois</address>
             <div>
-                <ul>
-                    <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-                    <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-                </ul>
-            </div>
-            <hr>
-            <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
-            <div>
-                <ul>
-                    <li><a href="#">Terms of Use</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Cookie Policy</a></li>
-                </ul>
+                <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+                <a href="https://twitter.com/holbertonschool">Twitter</a>
+                <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
             </div>
         </footer>
     </body>
