--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -31,12 +31,13 @@
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
-            <div>
-                <section>
+            <!-- Hero section -->
+            <section>
+                <div>
                     <h2>We help you build your brand!</h2>
                     <a href="#">Get started</a>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Services section -->
             <div>
                 <section>
@@ -75,8 +76,8 @@
                 </section>
             </div>
             <!-- About Us section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>About Us</h2>
                         <p>Everything about us</p>
@@ -90,8 +91,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
                     <a href="about.html">Learn more about us</a>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Latest news section -->
             <div>
                 <section>
@@ -141,8 +142,8 @@
                 </section>
             </div>
             <!-- Contact section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
@@ -151,8 +152,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
                     <a href="contact.html">Get in touch</a>
-                </section>
-            </div>
+                </div>
+            </section>
         </main>
         <!-- Footer -->
         <footer>
