--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -31,12 +31,13 @@
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
-            <div>
-                <section>
+            <!-- Hero section -->
+            <section>
+                <div>
                     <h2>We help you build your brand!</h2>
                     <a href="#">Get started</a>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Services section -->
             <div>
                 <section>
@@ -157,8 +158,8 @@
                 </section>
             </div>
             <!-- Contact section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Contact</h2>
                         <p>We like to know new people</p>
@@ -167,8 +168,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
                     <a href="contact.html">Get in touch</a>
-                </section>
-            </div>
+                </div>
+            </section>
         </main>
         <!-- Footer -->
         <footer>
