Added link for works

--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -62,13 +62,13 @@
                     </header>
                     <div>
                         <article> 
-                            <h3>Interior Design</h3>
+                            <a href="#"><h3>Interior Design</h3></a>
                         </article>
                         <article> 
-                            <h3>Web Development</h3>
+                            <a href="#"><h3>Web Development</h3></a>
                         </article>
                         <article> 
-                            <h3>Personal Brand</h3>
+                            <a href="#"><h3>Personal Brand</h3></a>
                         </article>
                     </div>
                 </div>
