--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -62,7 +62,7 @@
             <!-- Horizontal Rule -->
             <section>
                 <header>
-                    <h2>Horizontal Rule</h2>
+                    <h2>Horizontal rule</h2>
                     <div>
                         <hr>
                     </div>
