--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -126,15 +126,15 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <blockquote cite="Yuri Y.">
-                            <article>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</article>
-                        </blockquote>
-                        <blockquote cite="Dorrie S.">
-                            <article>Thank you so much for your help. Techium company is awesome!</article>
-                        </blockquote>
-                        <blockquote cite="Sven H.">
-                            <article>I love your system. Definitely worth the investment. I'd be lost without Techium company.</article>
-                        </blockquote>
+                        <article>
+                            <blockquote cite="Yuri Y.">I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+                        </article>
+                        <article>
+                            <blockquote cite="Dorrie S.">Thank you so much for your help. Techium company is awesome!</blockquote>
+                        </article>
+                        <article>
+                            <blockquote cite="Sven H.">I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
+                        </article>
                 </div>
             </section>
             <!-- Contact section -->
