--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -122,25 +122,34 @@
                 </section>
             </div>
             <!-- Testimonials section -->
-            <div>
-                <section>
+            <section>
+                <div>
                     <header>
                         <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <blockquote cite="Yuri Y.">
-                            <article>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</article>
-                        </blockquote>
-                        <blockquote cite="Dorrie S.">
-                            <article>Thank you so much for your help. Techium company is awesome!</article>
-                        </blockquote>
-                        <blockquote cite="Sven H.">
-                            <article>I love your system. Definitely worth the investment. I'd be lost without Techium company.</article>
-                        </blockquote>
+                        <article>
+                            <blockquote>
+                                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                                <cite>Yuri Y.</cite>
+                            </blockquote>
+                        </article>
+                        <article>
+                            <blockquote>
+                                <p>Thank you so much for your help. Techium company is awesome!</p>
+                                <cite>Dorrie S.</cite>
+                            </blockquote>
+                        </article>
+                        <article>
+                            <blockquote>
+                                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                                <cite>Sven H.</cite>
+                            </blockquote>
+                        </article>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
             <!-- Contact section -->
             <section>
                 <div>
