--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -143,7 +143,7 @@
                 <div>
                     <h3>Default</h3>
                     <details>
-                        <summary>Show/Hide Me</summary>
+                        <summary>Show/Hide me</summary>
                         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                     </details>
                 </div>
