--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -64,15 +64,15 @@
                     </header>
                     <div>
                         <article> 
-                            <img src="images/pic-work-01.jpg">
+                            <div><img src="images/pic-work-01.jpg"></div>
                             <h3>Interior Design</h3>
                         </article>
                         <article> 
-                            <img src="images/pic-work-02.jpg">
+                            <div><img src="images/pic-work-02.jpg"></div>
                             <h3>Web Development</h3>
                         </article>
                         <article> 
-                            <img src="images/pic-work-03.jpg">
+                            <div><img src="images/pic-work-03.jpg"></di>
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
