--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -64,15 +64,15 @@
                     </header>
                     <div>
                         <article> 
-                            <div><img src="images/pic-work-01.jpg"></div>
+                            <div><img src="images/pic-work-01.jpg" alt=""></div>
                             <h3>Interior Design</h3>
                         </article>
                         <article> 
-                            <div><img src="images/pic-work-02.jpg"></div>
+                            <div><img src="images/pic-work-02.jpg" alt=""></div>
                             <h3>Web Development</h3>
                         </article>
                         <article> 
-                            <div><img src="images/pic-work-03.jpg"></di>
+                            <div><img src="images/pic-work-03.jpg" alt=""></div>
                             <h3>Personal Brand</h3>
                         </article>
                     </div>
@@ -86,7 +86,7 @@
                         <p>Everything about us</p>
                     </header>
                     <div>
-                        <img src="images/pic-about-us.jpg" width="460" height="447">
+                        <img src="images/pic-about-us.jpg" alt="" width="460" height="447">
                         <h3>Who are we</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
@@ -106,7 +106,7 @@
                     <div>
                         <article>
                             <div>
-                                <img src="images/pic-blog-01.jpg" width="305" height="205">
+                                <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Career</p>
                             <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
@@ -115,7 +115,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-blog-02.jpg" width="305" height="205">
+                                <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Digital Life</p>
                             <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
@@ -124,7 +124,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-blog-03.jpg" width="305" height="205">
+                                <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Social</p>
                             <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
