--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -146,11 +146,11 @@
                         <blockquote cite="Yuri Y.">
                             <article>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</article>
                         </blockquote>
-                        <img src="images/pic-person-02.jpg" alt="Yuri Y. avatar" width="100" height="100">
+                        <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
                         <blockquote cite="Dorrie S.">
                             <article>Thank you so much for your help. Techium company is awesome!</article>
                         </blockquote>
-                        <img src="images/pic-person-03.jpg" alt="Yuri Y. avatar" width="100" height="100">
+                        <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
                         <blockquote cite="Sven H.">
                             <article>I love your system. Definitely worth the investment. I'd be lost without Techium company.</article>
                         </blockquote>
