--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -160,7 +160,10 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg " controls>
+                <video controls
+                    src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4"
+                    poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg"
+                    loop="true">
                     Sorry, your browser doesn't support HTML5 video
                 </video>
             </section>
