--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -68,6 +68,7 @@
                     </div>
                 </header>
             </section>
+            
             <!-- Blockquotes -->
             <section>
                 <header>
@@ -82,9 +83,8 @@
                     <blockquote cite="Kanye West, Musician">
                         <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers.
                             I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities,
-                            to show people, this is the level that things could be at.
-                            <figcaption><cite>Kanye West, Musician</cite></figcaption>
-                        </p>
+                            to show people, this is the level that things could be at.</p>
+                        <figcaption><cite>Kanye West, Musician</cite></figcaption>
                     </blockquote>
                 </div>
             </section>
