--- a/0x0D-JQuery_advanced/2-index.html
+++ b/0x0D-JQuery_advanced/2-index.html
@@ -14,7 +14,6 @@
         <script type="application/javascript">
             function createFamilyTree() {
                 $("body").append(`
-                <div>
                     <table>
                         <thead>
                             <tr>
@@ -36,8 +35,7 @@
                                 <td>Salva</td>
                             </tr>
                         </tbody>
-                    </table>
-                </div>`);
+                    </table>`);
             }
             createFamilyTree();
         </script>
